# ml-lib

./: README.md  pyproject.toml  training_params.yaml
.github/workflows/: release.yml  versioning.yml
data/tokenized/: tokenizer.pkl
ml_lib/: __init__.py  prepocess_util.py  prepossessing.py  utils.py
ml_lib_remla/: preprocessing.py
preprocess_util/: pyproject.toml
resources/: label_encoder.pkl  tokenizer.pkl
