[tool.poetry]
name = "ml-lib-remla"
version = "0.0.0"
description = ""
authors = ["oltremare <oncwnuHZnY0Uo1jEvpEs9s-sZa78@git.weixin.qq.com>"]
readme = "README.md"
include = ["resources/tokenizer.pkl", "resources/label_encoder.pkl"]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.41.2"
scikit-learn = "^1.4.2"
importlib-resources = "^6.4.0"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
